# Megaproject-Mekatronikk

./: .gitignore  README.md
src/cube_pointer_controller/: CMakeLists.txt  README.md  package.xml
src/cube_pointer_controller/config/: params.yaml
src/cube_pointer_controller/launch/: controller.launch.py
src/cube_pointer_controller/src/: controller_node.cpp  simple_move.cpp
src/cube_tracker/: README.md  package.xml  setup.cfg  setup.py
src/cube_tracker/cube_tracker/: cube_detector.py  cube_listener.py  cube_tf_republisher.py
src/cube_tracker/launch/: static_camera.launch.py
src/cube_tracker/resource/: camera_calib.npz
src/cube_tracker/resource/camera_calib/: cameraMatrix.npy  rvecs.npy  tvecs.npy
src/npz_loader/: package.xml  setup.cfg  setup.py
src/npz_loader/calibration_data/: dist.npy
src/npz_loader/npz_loader/: load_npz_node.py
src/scene/: README.md  package.xml  setup.cfg  setup.py
src/scene/launch/: scene.launch.py
src/scene/scene/: interactive_scene.py  table_scene.py
src/ur_bringup/: package.xml  setup.py
src/ur_bringup/launch/: ur_bringup.launch.py
