<?xml version="1.0"?>
<package format="3">
  <name>scene</name>
  <version>0.0.1</version>
  <description>Adds collision objects to the MoveIt planning scene.</description>
  <maintainer email="sebastmy@stud.ntnu.no">sebastian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
